assign deliver for manager api + small fix